@@ -37,7 +37,8 @@ EventQL v0.5.0 beta;
     server.load_limit_{soft,hard}, server.partitions_loading_limit_{soft,hard},
     server.loadinfo_publish_interval, server.noalloc,
     server.s2s_pool_max_connections, server.s2s_pool_max_connections_per_host,
-    server.s2s_pool_linger_timeout, cluster.allow_create_database
+    server.s2s_pool_linger_timeout, cluster.allow_create_database,
+    server.replication_threads_max
 
   * Added new sql functions: usleep, fnv32
 
